  removes false positives (but may cause some trouble with hostname
  parsing). For details, see this bug tracker:
  http://bugzilla.adiscon.com/show_bug.cgi?id=126
- added configuration commands (see doc for explanations)
  * $OMFileZipLevel
  * $OMFileIOBufferSize
  * $OMFileFlushOnTXEnd
  * $MainMsgQueueSyncQueueFiles
  * $ActionQueueSyncQueueFiles
---------------------------------------------------------------------------
Version 4.3.2  [beta] (rgerhards), 2009-06-24
- removed long-obsoleted property UxTradMsg
- added a generic network stream server (in addition to rather specific
  syslog tcp server)
- added ability for the UDP output action to rebind its send socket after
  sending n messages. New config directive $ActionSendUDPRebindInterval
  added for the purpose. By default, rebinding is disabled. This is 
  considered useful for load balancers.
- bugfix: imdiag/imtcp had a race condition
- improved testbench (now much better code design and reuse)
- added config switch --enable-testbench=no to turn off testbench
---------------------------------------------------------------------------
Version 4.3.1  [DEVEL] (rgerhards), 2009-05-25
- added capability to run multiple tcp listeners (on different ports)
- performance enhancement: imtcp calls parser no longer on input thread
  but rather inside on of the potentially many main msg queue worker
  threads (an enhancement scheduled for all input plugins where this is
  possible)
- added $GenerateConfigGraph configuration command which can be used
  to generate nice-looking (and very informative) rsyslog configuration
  graphs.
- added $ActionName configuration directive (currently only used for
  graph generation, but may find other uses)
- improved doc
  * added (hopefully) easier to grasp queue explanation
- improved testbench
  * added tests for queue disk-only mode (checks disk queue logic)
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs